chore: 클로드 코드 문서 작성 및 리팩터링 (#93)
* docs: 클로드 코드 문서 작성

* refactor: 와일드카드 import 제거

* refactor: 무분별한 setter, data 어노테이션 제거

* refactor: DTO 관련 리팩터링

- record를 사용하도록
- of/from 패턴을 사용하도록
- XXXResponse/Request 네이밍을 따르도록
- Entity를 DTO로 변환하는 경우 정적 팩토리 메서드를 사용하도록

* refactor: DTO 리팩터링에 따른 테스트 코드 수정

* refactor: 컨트롤러 리팩터링

* refactor: 커스텀 예외 처리 클래스를 사용하여 예외 처리 하도록

* refactor: 테스트 코드 관련 리팩터링

* refactor: 불필요한 빌더 제거

* refactor: 널 처리 일관화

- 널인 경우 모두 "unknown"을 리턴하도록

* refactor: 페이지네이션이 올바르게 작동하도록

* refactor: 커넥션 풀 고갈될 수 있는 문제 수정

* docs: CLAUDE.md 가독성 있게 수정

* refactor: 리팩터링에 따른 폴더 구조 변화 반영